feat: Update project dependencies and metadata
This commit updates various project dependencies to their latest versions, including React, genai, lucide-react, react-router-dom, and Firebase. It also refactors the project name and description in `package.json` and `metadata.json` to accurately reflect the application's purpose. Additionally, minor type adjustments and a fix for a TypeScript error in `page.tsx` are included to ensure compatibility with the updated dependencies. The `index.html` title is also updated.

--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
-
 {
-  "name": "sdq-management",
+  "name": "copy-of-halaqah-sdq-manager",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.2.1",
-    "lucide-react": "^0.263.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "framer-motion": "^10.15.0",
-    "recharts": "^2.7.2",
-    "d3": "^7.8.5"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.33.0",
+    "lucide-react": "^0.561.0",
+    "react-router-dom": "^7.10.1",
+    "firebase": "^12.6.0",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
